<resources>
    <string name="app_name">Checkoutin</string>
    <string name="title_home">Home</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_keranjang_fragment">Ini Keranjang Fragment</string>
    <string name="keranjang">Keranjang</string>
    <string name="ini_profil_fragment">Ini Profil Fragment</string>
    <string name="profil">Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="nama">Nama</string>
    <string name="email">EMAIL</string>
</resources>