<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.theonom.checkoutin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pembayaran"
        android:name="com.theonom.checkoutin.ui.pembayaran.PembayaranFragment"
        android:label="@string/pembayaran"
        tools:layout="@layout/fragment_pembayaran" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.theonom.checkoutin.ui.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.theonom.checkoutin.ui.keranjang.KeranjangFragment"
        android:label="@string/keranjang"
        tools:layout="@layout/fragment_keranjang"/>

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.theonom.checkoutin.ui.profil.ProfilFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profil"/>
</navigation>